Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69148

Android: LargeFile::mapOffsetOverflow fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.11.2
    • 5.11
    • Core: I/O
    • None
    • Android
    • 9a04453b50ea22d6060aeb49250cf3e263d86ad3

    Description

      I/QTestLib(29926): FAIL! : tst_LargeFile::mapOffsetOverflow() Compared values are not the same
      I/QTestLib(29926): Actual (!!address): 1
      I/QTestLib(29926): Expected (succeeds) : 0
      I/QTestLib(29926): Loc: [D:\projects\qt\clean-5.11\src\qtbase\tests\auto\corelib\io\largefile\tst_largefile.cpp(540)]

      It only fails when the value of 'i' is 31. Every value greater than 31 does not fail, but does not print the expected warning, so it fails regardless.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            manordheim MÃ¥rten Nordheim
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes